# secu_sokk_2020

./: README.md
.github/workflows/: docker-publish.yml
backend/: README.md
backend/webshopBackend/: build.gradle.kts
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/: DbSeeder.kt  RoleRepository.kt  WebshopApplication.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/admin/: AdminController.kt  AdminService.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/authentication/: AuthController.kt  AuthService.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/authentication/dto/request/: LoginRequest.kt  RolesRequest.kt  SignupRequest.kt  SignupResponse.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/authentication/dto/response/: AuthResponse.kt  JwtResponse.kt  MessageResponse.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/caff/: CaffController.kt  CaffRepository.kt  CaffService.kt  CommentRepository.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/caff/dto/: CaffDetail.kt  CommentRequest.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/download/: DownloadController.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/models/: Caff.kt  Comment.kt  ECaffStatus.kt  ERolee.kt  ETagType.kt  Role.kt  Tag.kt  User.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/security/: WebSecurityConfig.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/security/jwt/: AuthEntryPointJwt.kt  AuthTokenFilter.kt  JwtUtils.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/security/services/: UserDetailsImpl.kt  UserDetailsProvider.kt  UserDetailsServiceImpl.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/upload/: CaffParserService.kt  FileSystemStorageService.kt  RawCaff.kt  StorageException.kt  StorageFileNotFoundException.kt  UploadController.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/user/: IUserService.kt  UserController.kt  UserRepository.kt  UserService.kt
backend/webshopBackend/src/main/kotlin/hu/bme/webshop/user/dto/: UserResponse.kt
backend/webshopBackend/src/main/resources/: application.properties
backend/webshopBackend/src/test/kotlin/hu/bme/webshop/: WebshopApplicationTests.kt
caff_generator/src/: BlockID.kt  CAFF.kt  CAFFAnimation.kt  CAFFBlock.kt  CAFFCredits.kt  CAFFData.kt  CAFFHeader.kt  CIFF.kt  CIFFContent.kt  CIFFHeader.kt  ConvertToByteArray.kt  CreationDate.kt  Main.kt  Pixel.kt  Utils.kt
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/admin/: admin-guard.ts  admin.component.html  admin.component.ts  admin.service.ts
frontend/src/app/auth/: auth-guard.ts  auth-interceptor.service.ts  auth.component.html  auth.component.ts  auth.service.ts  user.model.ts
frontend/src/app/header/: header.component.html  header.component.ts
frontend/src/app/pictures/: pictures.component.html  pictures.component.ts  pictures.service.ts  thumbnail.model.ts
frontend/src/app/pictures/picture/: picture.component.html  picture.component.ts  picture.service.ts
frontend/src/app/shared/: loading-spinner.component.css  loading-spinner.component.ts
frontend/src/app/upload/: upload.component.html  upload.component.ts  upload.service.ts
parser/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SETUP.md
parser/doc/: CAFF.txt  CIFF.txt
parser/res/: README.md
parser/res/fuzz/: bad_length.caff  bad_strings.caff  big.caff  valid.caff
parser/src/: CAFF.cpp  CAFF.hpp  CIFF.cpp  CIFF.hpp  CMakeLists.txt  Date.hpp  main.cpp  util.hpp
parser/test/: CMakeLists.txt  test.cpp
parser/test/res/expected/: 1.json
